# sp_vision_tutorial_26

lecture2/: CMakeLists.txt
lecture2/homework/: fmt_test.cpp  main.cpp  tools.cpp  tools.hpp
lecture2/part_1/: cpp_basics.cpp
lecture3/homework/: CMakeLists.txt  main.cpp
lecture3/homework/io/: CMakeLists.txt  example.cpp  my_camera.cpp  my_camera.hpp
lecture3/part1/: main.cpp
lecture3/part2/: main.cpp
lecture4/class/src/: main.cpp
lecture4/homework/: CMakeLists.txt
lecture4/homework/src/: main.cpp  video.cpp
lecture4/homework/tasks/: CMakeLists.txt  buff_detector.cpp  buff_solver.cpp  buff_solver.hpp  buff_type.hpp
lecture4/homework/tools/: img_tools.hpp
